# kid-document

./: README.md  kid-document.cabal
app/: Main.hs
app/etc/: kid_de.native  kid_en.native  kid_fr.native  kid_it.native
src/KID/: Document.hs
src/KID/Document/: Domain.hs  Loader.hs  Template.hs
src/KID/Document/Template/: section1_de.md  section1_en.md  section1_fr.md  section1_it.md  section2_de.md  section2_en.md  section2_fr.md  section2_it.md  section3_de.md  section3_en.md  section3_fr.md  section3_it.md  section4_de.md  section4_en.md  section4_fr.md  section4_it.md  section4_performance_scenarios_it.html  section5_de.md  section5_en.md  section5_fr.md  section5_it.md  section6_composition_of_costs_de.html  section6_de.md  section6_en.md  section6_fr.md  section6_it.md  section7_de.md  section7_en.md  section7_fr.md  section7_it.md  section8_de.md  section8_en.md  section8_fr.md  section8_it.md  section9_de.md  section9_en.md  section9_fr.md  section9_it.md
test/: Spec.hs
test/example/: terms.json
