name:                kid-document
version:             0.1.0.0
description:         Library based on Pandoc to generate the Key Information Document
homepage:            https://github.com/monoid-gmbh/kid-document#readme
license-file:        LICENSE
author:              Yves Hauser
copyright:           2019 Yves Hauser
build-type:          Simple
extra-source-files:    README.md
                     , app/etc/*.native
                     , src/KID/Document/Template/*.md
                     , src/KID/Document/Template/*.html
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     KID.Document
                     , KID.Document.Domain
                     , KID.Document.Loader
                     , KID.Document.Template
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , lens
                     , pandoc
                     , pandoc-types
                     , text
                     , template-haskell
                     , time
                     , mtl
  default-language:    Haskell2010

executable kid-document-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , kid-document
                     , pandoc
                     , cmdargs
  default-language:    Haskell2010

test-suite kid-document-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , lens
                     , pandoc
                     , pandoc-types
                     , text
                     , template-haskell
                     , time
                     , mtl
                     , kid-document
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yveshauser/kid-document
